--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.0",
     "@react-google-maps/api": "^2.20.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
